Correções gerais e implementação da serialização correta